# amxx-module-cmake

./: CMakeLists.txt  main.cpp
sdk/: moduleconfig.h
